--- a/index.html
+++ b/index.html
@@ -24,6 +24,65 @@
             </div>
         </nav>
 
+        <!-- Showcase -->
+        <section class="section-a">
+            <div class="container">
+                <div>
+                    <h1>The Headphones of the future</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Omnis dolor temporibus culpa architecto delectus, odit
+                        laudantium totam ipsum consectetur perspiciatis sapiente
+                        doloribus. Sed, dolores quia dolorem quae iste
+                        voluptatum soluta.
+                    </p>
+                    <a href="#" class="btn">Read More</a>
+                </div>
+                <img src="dist/img/showcase.jpg" alt="" />
+            </div>
+        </section>
+
+        <!-- Overlay Text -->
+        <section class="section-b">
+            <div class="overlay">
+                <div class="section-b-inner">
+                    <h3>Loud & Clear</h3>
+                    <h2>People Aren't Hearing All The Music</h2>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing
+                        elit. Expedita quos laboriosam pariatur amet quam omnis
+                        quo fuga repellat neque sit.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Gallery -->
+        <section class="section-c">
+            <div class="gallery">
+                <!-- We wont use the container here because the content will be full width. -->
+                <!-- We will use CSS Grid here. The div .gallery will we our Grid container. And then we will have a bunch of <a> with the images. -->
+                <a href="https://i.ibb.co/CHLBZnp/gal2323.jpg" class="big"
+                    ><img src="https://i.ibb.co/CHLBZnp/gal2323.jpg" alt=""
+                /></a>
+                <a href="https://i.ibb.co/4pBbhfY/gal39834.jpg" class="big"
+                    ><img src="https://i.ibb.co/4pBbhfY/gal39834.jpg" alt=""
+                /></a>
+                <a href="https://i.ibb.co/xSnHP7g/gal43884.jpg" class="big"
+                    ><img src="https://i.ibb.co/xSnHP7g/gal43884.jpg" alt=""
+                /></a>
+                <a href="https://i.ibb.co/QN6Bnrb/gal4958.jpg" class="big"
+                    ><img src="https://i.ibb.co/QN6Bnrb/gal4958.jpg" alt=""
+                /></a>
+                <a href="https://i.ibb.co/dGZvj75/gal4545.jpg" class="big">
+                    <img src="https://i.ibb.co/dGZvj75/gal4545.jpg" alt=""
+                /></a>
+                <a href="https://i.ibb.co/S6FVFNt/gal74744.jpg" class="big"
+                    ><img src="https://i.ibb.co/S6FVFNt/gal74744.jpg" alt=""
+                /></a>
+            </div>
+        </section>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <script src="dist/js/simple-lightbox.min.js"></script>
         <script>
