[ADD] Media Queries - Finished Product Landing Page v0.1

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
         </section>
 
         <!-- Footer -->
-        <footer class="section-footer py-4 bg-primary">
+        <footer class="section-footer">
             <div class="container">
                 <div>
-                    <h2 class="text-2 mb-1">Lorem ipsum dolor sit.</h2>
+                    <h2>Lorem ipsum dolor sit.</h2>
                     <a href="http://twitter.com">
                         <i class="fab fa-twitter fa-2x"></i>
                     </a>
@@ -121,12 +121,7 @@
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </p>
-                    <form
-                        class="mt-1"
-                        name="email-form"
-                        method="POST"
-                        data-netlify="true"
-                    >
+                    <form name="email-form" method="POST" data-netlify="true">
                         <div class="email-form">
                             <span class="form-control-wrap">
                                 <input
@@ -151,6 +146,7 @@
             </div>
         </footer>
 
+        <!-- Scripts -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <script src="dist/js/simple-lightbox.min.js"></script>
         <script>
